@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-02-22 mmichaud <michael.michaud@free.fr>
+  * Bug #3488976 : fixed problems in the Noder plugin except one depending on a
+    new version of JTS (preserving z with snap-rounding noder). There is still
+    room for optimization in this plugin.
+
 2012-02-19 mmichaud <michael.michaud@free.fr>
   * Improved SnapToGridPolicy to avoid floating point issue with fractional
     grid size (872939.1 -> 872939.1000000001)
